Fixed bug #34893 (PHP5.1 overloading, Cannot access private property)